force-app/main/default/objects/Cleaning_Schedule__c/Cleaning_Schedule__c.object-meta.xml
<CustomObject>
    <label>Cleaning Schedule</label>
    <nameField>
        <label>Cleaning Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cleaning Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>