force-app/main/default/objects/Cleaning_Schedule__c/fields/Days_Since_Last_Clean__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Clean__c</fullName>
    <formula>Last_Cleaning__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Clean</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>