force-app/main/default/objects/Cleaning_Schedule__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <referenceTo>Floor__c</referenceTo>
    <relationshipLabel>Cleaning Schedules</relationshipLabel>
    <relationshipName>Cleaning_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>