force-app/main/default/objects/Cleaning_Schedule__c/fields/Last_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Last_Cleaning__c</fullName>
    <label>Last Cleaning</label>
    <type>Date</type>
</CustomField>