force-app/main/default/objects/Cleaning_Schedule__c/fields/Next_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Next_Cleaning__c</fullName>
    <label>Next Cleaning</label>
    <type>Date</type>
</CustomField>